# pinns_for_comp_mech

./: .gitignore  .gitmodules  .pre-commit-config.yaml  2D_elascticity_model.py  Dockerfile  Euler_beam_cantiliver_static.py  Euler_beam_fixed_static.py  Euler_beam_simply_dynamic.py  LICENSE  README.md  __version__.py  env.yaml  env.yml  environment.yml  heatEq.py  postProcessModel.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cluster.sh  test_figlet.ipynb
.github/workflows/: check_env.yaml  code-checks.yaml  pre-commit.yaml  push-to-collab.yaml  run_all_examples.yaml  run_failing_examples.yaml
beams/: Euler_beam_cantiliver_static.py  Euler_beam_fixed_static.py  Euler_beam_simply_complex_static.py  Euler_beam_simply_dynamic.py  Euler_beam_simply_point_static.py  Euler_beam_simply_static.py
compsim-pinns/geometry/: geometry_utils.py
compsim-pinns/vpinns/: quad_rule.py  v_pde.py
compsim_pinns/: __init__.py
compsim_pinns/contact_mech/: contact_utils.py
compsim_pinns/elasticity/: elasticity_utils.py
compsim_pinns/geometry/: custom_geometry.py  gmsh_models.py
compsim_pinns/hyperelasticity/: hyperelasticity_utils.py
compsim_pinns/postprocess/: custom_callbacks.py  elasticity_postprocessing.py
compsim_pinns/vpinns/: quad_rule.py
context-and-states/: context.pkl  state-1.pkl  state-10.pkl  state-2.pkl  state-3.pkl  state-4.pkl  state-5.pkl  state-6.pkl  state-7.pkl  state-8.pkl  state-9.pkl
deep_energy_examples/3d_examples/: 3d_block_torsion_nonlinear.py  3d_block_torsion_nonlinear_displacement.py  3d_block_torsion_nonlinear_displacement_incremental_adam.py  3d_block_torsion_nonlinear_displacement_incremental_adam_pytorch.py  3d_block_torsion_nonlinear_displacement_incremental_compare.py  3d_block_torsion_nonlinear_displacement_incremental_exponential_decay.py  3d_block_torsion_nonlinear_displacement_incremental_fine.py  3d_block_torsion_nonlinear_displacement_incremental_learning_rate.py  3d_block_torsion_nonlinear_displacement_incremental_lr_scheduler.py  3d_block_torsion_nonlinear_displacement_incremental_relaxation.py  3d_block_under_compression_displacement.py  3d_block_under_compression_tet_elements.py  3d_contact_ring_instability_half.py  3d_contact_ring_instability_quarter.py  3d_hertzian_spherical_contact_incremental_exponential_decay.py  3d_lame_under_internal_pressure_tet_elements.py
deep_energy_examples/beam/: Beam_under_shear_load_nonlinear.py  Beam_under_shear_load_nonlinear_incremental.py  Beam_under_shear_load_nonlinear_incremental_exponential_decay.py  Beam_under_shear_load_nonlinear_lbfgs.py  Beam_under_shear_load_nonlinear_tri_elements.py
deep_energy_examples/contact_ring/: contact_ring_instability_half.py  contact_ring_instability_half_incremental.py
deep_energy_examples/fem_reference/: fem_reference_2d_bending_beam_00.vtu  fem_reference_2d_bending_beam_03.vtu  fem_reference_2d_bending_beam_06.vtu  fem_reference_2d_bending_beam_07.vtu  fem_reference_2d_bending_beam_09.vtu  fem_reference_3d_block_torsion_angle_000.vtu  fem_reference_3d_block_torsion_angle_015.vtu  fem_reference_3d_block_torsion_angle_060.vtu  fem_reference_3d_block_torsion_angle_075.vtu  fem_reference_3d_block_torsion_angle_120.vtu  fem_reference_3d_block_torsion_angle_coarse_045.vtu  fem_reference_3d_block_torsion_angle_coarse_090.vtu  fem_reference_3d_block_torsion_angle_coarse_105.vtu  fem_reference_3d_block_torsion_angle_coarse_135.vtu  fem_reference_3d_block_torsion_angle_coarse_150.vtu
deep_energy_examples/hertzian/: Hertzian_normal_contact.py  Hertzian_normal_contact_data.py  Hertzian_normal_contact_nonlinear.py  Hertzian_normal_contact_repulsive.py
deep_energy_examples/lame/: Lame_problem_quarter.py  Lame_problem_quarter_nonlinear.py  Lame_problem_quarter_nonlinear_incremental.py  Lame_problem_quarter_tri_elements.py
deep_energy_examples/single_block/: single_block_compression.py  single_block_compression_enhanced.py  single_block_compression_mixed.py  single_block_compression_traction.py  single_block_compression_traction_paper.py  single_block_compression_traction_tri_elements.py
deep_energy_examples/single_patch/: single_patch_compression.py
docker/: Dockerfile
docs/source/: conf.py  index.rst
elasticity_2d/: 2D_elascticity_model.py  Beam2d.py  Beam2d_4point_compare_loading.py  Beam2d_4point_step.py  Beam2d_force_input.py  Beam2d_nondim.py  Contact_patch.py  Contact_single_patch.py  Contact_single_patch_all_methods.py  Contact_single_patch_complementarity.py  Hertzian_dirichlet.py  Hertzian_dirichlet_contact.py  Hertzian_normal_contact.py  Hertzian_normal_contact_fisher_burmeister.py  Hertzian_pressure.py  Lame_problem.py  Lame_problem_full_gmsh.py  Lame_problem_quarter.py  Lame_problem_quarter_gmsh.py  Lame_problem_quarter_gmsh_nondim.py  Lame_problem_quarter_gmsh_nondim_2.py  Rectangle_body_force_problem.py  elasticity_postprocessing.py
elasticity_3d/: block_under_compression.py  block_under_shear.py
fem_references/: README.md
heatEquation/: heatEq.py  heatEq1DPlusDiffusion.py  heatEq2D.py  postProcessModel.py  postProcessModelParameter.py
manuscript_pinns/: bibliography.bib  main.tex  mnfrontpage.sty  style.sty
poisson_variational/: Lame_quarter_mixed.py  poisson_1d.py  poisson_2d.py  possion_1d.py
post_process/: Combination_of_graphs.ipynb
post_processing/: post_processing.py
pre-commit-utils/: typos.toml
tests/: conftest.py
utils/: contact_utils.py  custom_geometry.py  deep_utils.py  elasticity_postprocessing.py  elasticity_utils.py  experiment_logger.py  exportVtk.py  geometry_utils.py  gmsh_models.py
(+446 files in other folders)
