[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# General metadata for the project
[project]
name = "ml4contact"
dynamic = ["version"]
license = { text = "MIT" }
authors = [
  {name = "Simon Völkl", email = "simon.voelkl@unibw.de"},
  {name = "Daniel Wolff", email = "d.wolff@unibw.de"},
  {name = "Tarik Sahin", email = "tarik.sahin@unibw.de"},
  {name = "Max von Danwitz", email = "max.danwitz@unibw.de"},
  {name = "Alexander Popp", email = "alexander.popp@unibw.de"},
]
maintainers = [
  {name = "Simon Völkl", email = "simon.voelkl@unibw.de"},
  {name = "Daniel Wolff", email = "d.wolff@unibw.de"},
]
description = "A library for PINNs on Computational Mechanics"
keywords = ["physics-informed neural networks", "computational mechanics", "contact mechanics"]
readme = "README.md"

# Dependencies of the project that need to be installed to use this project properly
dependencies = [
  "scipy",
  "deepxde",
  "gmsh",
  "matplotlib",
  "numpy",
  "pandas",
  "pyevtk",
  "pyvista",
  "seaborn",
  "torch",
  "triangle",
]

[tool.hatch.version]
path = "__version__.py"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "sphinx"
]

# Online references about the project
[project.urls]
Homepage = "https://github.com/imcs-compsim/collab-ansys-ml4contact"
Repository = "https://github.com/imcs-compsim/collab-ansys-ml4contact.git"
Issues = "https://github.com/imcs-compsim/collab-ansys-ml4contact/issues"
"Bug Tracker" = "https://github.com/imcs-compsim/collab-ansys-ml4contact/issues?q=is%3Aissue%20state%3Aopen%20label%3Abug"

[tool.hatch.build.targets.wheel]
packages = [
  "utils",
  "utils.contact_mech",
  "utils.elasticity",
  "utils.geometry",
]