[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# General metadata for the project
[project]
name = "CompSim_PINNs"
version = "2025.0.0"
license = { text = "MIT" }
authors = [
  {name = "Tarik Sahin", email = "tarik.sahin@unibw.de"},
  {name = "Max von Danwitz", email = "max.danwitz@unibw.de"},
  {name = "Daniel Wolff", email = "d.wolff@unibw.de"},
  {name = "Simon Völkl", email = "simon.voelkl@unibw.de"},
]
maintainers = [
  {name = "Tarik Sahin", email = "tarik.sahin@unibw.de"},
  {name = "Daniel Wolff", email = "d.wolff@unibw.de"},
]
description = "A library for PINNs on Computational Mechanics"
keywords = ["physics-informed neural networks", "computational mechanics", "contact mechanics"]
readme = "README.md"

# Dependencies of the project that need to be installed to use this project properly
requires-python = "==3.12.*"
dependencies = [
  "scipy",
  "deepxde",
  "gmsh",
  "matplotlib",
  "numpy",
  "pandas",
  "pyevtk",
  "pyvista",
  "seaborn",
  "torch",
  "triangle",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "sphinx",
  "myst-parser",
]
tf = [
  "tensorflow",
]
torch = [
  "torch"
]

# Online references about the project
[project.urls]
Homepage = "https://github.com/imcs-compsim/pinns_for_comp_mech"
Repository = "https://github.com/imcs-compsim/pinns_for_comp_mech.git"
Issues = "https://github.com/imcs-compsim/pinns_for_comp_mech/issues"
"Bug Tracker" = "https://github.com/imcs-compsim/pinns_for_comp_mech/issues?q=is%3Aissue%20state%3Aopen%20label%3Abug"

[tool.hatch.build.targets.wheel]
packages = [
  "compsim_pinns",
]

# Unit test related settings
[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = [
    "tests/integration_tests/beams",
    "tests/unit_tests/",
]
markers = [
    "unit_tests: marks tests as unit tests",
    "integration_tests: marks tests as integration tests",
]
    